# sqlcipher-cmake

./: CMakeLists.txt  README.md  smain.cpp
